--- a/myportfolio.html
+++ b/myportfolio.html
@@ -9,7 +9,7 @@
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark px-5 pb-3">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#">Portfolio</a>
+            <a class="navbar-brand" href="#about">Portfolio</a>
             <ul class="navbar-nav ms-auto">
                 <li class="nav-item">
                     <a class="nav-link">About Me</a>
@@ -33,9 +33,14 @@
         </div>
     </header>  
     <main>
-        <div></div>
-        <div></div>
-        <div></div>
+        <div class="d-flex flex-column">
+            <div>
+                <h1 id="about">About Me</h1>
+                <p>Hello, my name is Muhammad Syafiq Bin Ismail.
+            </div>
+            <div></div>
+            <div></div>
+        </div>
     </main> 
     
     
