--- a/myportfolio.html
+++ b/myportfolio.html
@@ -6,13 +6,13 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
     <title>Portfolio</title>
 </head>
-<body>
+<body class="bg-secondary-subtle">
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark px-5 pb-3">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#about">Portfolio</a>
+            <a class="navbar-brand" href="#">Portfolio</a>
             <ul class="navbar-nav ms-auto">
                 <li class="nav-item">
-                    <a class="nav-link">About Me</a>
+                    <a class="nav-link" href="#about">About Me</a>
                 </li>
             </ul>
         </div>
@@ -33,8 +33,8 @@
         </div>
     </header>  
     <main>
-        <div class="d-flex flex-column">
-            <div>
+        <div class="d-flex flex-column w-75 mx-auto mt-5">
+            <div class="p-5 align-items-center bg-light rounded-3">
                 <h1 id="about">About Me</h1>
                 <p>Hello, my name is Muhammad Syafiq Bin Ismail.
             </div>
